# enhanced-torrench

./: .coverage  .coveragerc  LICENSE  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  torrench.py
endpoints/: kickass.py  lime.py  pirate_bay.py  rarbg.py  site.py  torrentz2.py
enhanced_torrench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py  test_endpoints.py  test_site.py  test_torrench.py
